fix scrollbar shifting the layout on the slug page

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -13,4 +13,5 @@
 
 body {
   background-color: var(--bg-color);
+  overflow-y: scroll;
 }
